traefik/traefik-dashboard-ir.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
    - match: Host(`traefik.dev.codeheroes.tech`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: cloudflare-tls
